Fix layout styles Implements flex and gap for layout contents.

--- a/src/client/ui/components/shared/layout/Layout.module.css
+++ b/src/client/ui/components/shared/layout/Layout.module.css
@@ -20,6 +20,9 @@
 }
 
 .Layout__Contents {
+    display: flex;
+    gap: 32px;
+    flex-direction: column;
     width: 100%;
     height: 100%;
     padding: 18px;
